--- a/src/main/resources/templates/student_form.html
+++ b/src/main/resources/templates/student_form.html
@@ -10,16 +10,22 @@
 </head>
 <body>
 <div class="container">
-    <h1>Форма добавления студента</h1>
+    <h1 th:text="#{title.student.form}">Форма добавления студента</h1>
     <div class="row">
-        <form method="post" th:action="@{/add}" class="col-md-6">
+        <form method="post" th:action="@{/add}" class="col-md-6" th:object="${studentShortDto}">
             <div class="mb-3">
                 <label for="name" class="form-label">Имя</label>
-                <input type="text" class="form-control" id="name" name="name">
+                <input type="text" class="form-control" id="name" th:field="*{name}">
+                <br>
+                <div th:each="err : ${#fields.errors('name')}" th:text="${err}" class="alert alert-danger">
+                </div>
             </div>
             <div class="mb-3">
                 <label for="score" class="form-label">Средний балл</label>
-                <input type="number" class="form-control" id="score" name="score">
+                <input type="number" class="form-control" id="score" th:field="*{score}">
+                <br>
+                <div th:each="err : ${#fields.errors('score')}" th:text="${err}" class="alert alert-danger">
+                </div>
             </div>
             <a th:href="@{'/'}" class="btn btn-secondary">Отмена</a>
             <button type="submit" class="btn btn-primary">Сохранить</button>
