--- a/src/main/resources/templates/student_info.html
+++ b/src/main/resources/templates/student_info.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="container">
-    <h1>Информация о студенте</h1>
+    <h1 th:text="#{title.student.info}">Информация о студенте</h1>
     <div class="card mb-3" style="max-width: 540px;">
         <div class="row g-0">
             <div class="col-md-4">
