--- a/src/main/resources/templates/student_list.html
+++ b/src/main/resources/templates/student_list.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="container">
-    <h1>Список студентов</h1>
+    <h1 th:text="#{title.student.list}">Список студентов</h1>
     <table class="table table-striped">
         <thead>
         <tr>
